# Mission3

homebot_ws/src/homebot/mission3_interfaces/srv/: VerifyCompliance.srv
mission3/: package.xml  setup.py
mission3/config/: prompts.yaml  waypoints.yaml
mission3/launch/: mission3.launch.py
mission3/mission3/: bridge_node.py  capture_node.py  compliance_helper.py  mission_manager_node.py  point_node.py  test_full_flow.py
mission3_interfaces/: CMakeLists.txt  package.xml
mission3_interfaces/srv/: AnalyzeRoom.srv
